lib/src/compiler/tests/testdata/errors/83.out
error[E010]: invalid pattern `$a`
 --> line:3:13
  |
3 |   $a = { 00 ~?? 11 }
  |             ^^^ negation of `??` is not allowed
  |